# mobileclip2_litert_export

./: .gitignore  README.md  main.py  mobileclip2_s2_fixed_preprocess_convert_test.py  pyproject.toml  test_mobileclip2_norm_fp16.py
